# SU

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  generate-ssl.sh  playwright-mcp-config.json  pyproject.toml  pytest.ini  sessions.db  startup.sh
app/: __init__.py  claude_client.py  config.py  database.py  main.py  memory_manager.py  models.py  rem_agent.py  session_manager.py  subconscious_agent.py  website_agent.py  website_models.py
app/static/css/: style.css
app/static/js/: chat.js
app/templates/: chat.html  index.html
nginx/: nginx.conf  nginx.local.conf
terraform/: main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
tests/: __init__.py  test_api.py
