[project]
name = "claude-task-executor"
version = "1.0.0"
description = "FastAPI application that executes tasks using the host Claude binary"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings>=2.0.0",
    "python-multipart==0.0.6",
    "claude-agent-sdk>=0.1.27",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
]
